@@ -41,8 +41,8 @@
     </scm>
 
     <properties>
-        <maven.compiler.source>25</maven.compiler.source>
-        <maven.compiler.target>25</maven.compiler.target>
+        <maven.compiler.source>21</maven.compiler.source>
+        <maven.compiler.target>21</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <junit.jupiter.version>5.11.3</junit.jupiter.version>
         <jmh.version>1.37</jmh.version>
@@ -165,11 +165,8 @@
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.13.0</version>
                 <configuration>
-                    <source>25</source>
-                    <target>25</target>
-                    <compilerArgs>
-                        <arg>--enable-preview</arg>
-                    </compilerArgs>
+                    <source>21</source>
+                    <target>21</target>
                 </configuration>
             </plugin>
 
@@ -179,7 +176,7 @@
                 <version>3.2.5</version>
                 <configuration>
                     <useModulePath>false</useModulePath>
-                    <argLine>--enable-preview @{argLine}</argLine>
+                    <argLine>@{argLine}</argLine>
                 </configuration>
             </plugin>
 
@@ -214,7 +211,6 @@
                     <classpathScope>test</classpathScope>
                     <executable>java</executable>
                     <arguments>
-                        <argument>--enable-preview</argument>
                         <argument>-classpath</argument>
                         <classpath/>
                         <!--suppress UnresolvedMavenProperty -->
@@ -246,8 +242,7 @@
                 <artifactId>maven-javadoc-plugin</artifactId>
                 <version>3.11.2</version>
                 <configuration>
-                    <source>25</source>
-                    <additionalOptions>--enable-preview</additionalOptions>
+                    <source>21</source>
                     <doclint>none</doclint>
                 </configuration>
                 <executions>
